syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "grpc-go/protogen/basic";

// Usually keep enum on top
enum Gender {
    GENDER_UNSPECIFIED = 0;
    GENDER_MALE= 1;
    GENDER_FEMALE = 2;
}

message Address {
    string street = 1;
    string city = 2;
    string country = 3;
}

message PaperMail {
    string adress = 1;
}

message SocialMedia {
    string platform = 1;
}

message InstantMessaging {
    string phone_number = 1;
}

message User {
    uint32 id = 1;
    string username = 2;
    bool is_active = 3 [json_name = "is_active"];
    bytes password = 4;
    Gender gender = 5;
    repeated string emails = 6;
    Address address = 7;
    google.protobuf.Any communication_channel = 8;
}
